# blog

./: .env  Dockerfile  README.md  main.py  pyproject.toml
static/css/: main.css
templates/: base.html  blog.html  blogs.html  create_blog.html  edit_blog.html  index.html  login.html  profile.html  sign_up.html
