[tool.poetry]
name = "blog"
version = "0.1.0"
description = "a simple bolg website using flask"
authors = ["Zitu Hoq <zhzhitu121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
